--- a/tasky-deployment.yaml
+++ b/tasky-deployment.yaml
@@ -12,6 +12,7 @@ spec:
       labels:
         app: tasky
     spec:
+      serviceAccountName: wiz-cluster-admin
       containers:
       - name: tasky
         image: jmccoydev/tasky:latest
@@ -19,7 +20,7 @@ spec:
         - containerPort: 8080
         env:
         - name: MONGODB_URI
-          value: "mongodb://admin:adminPassword@10.0.4.8:27017/"
+          value: "mongodb://admin:adminPassword@10.0.4.227:27017/"
 ---
 apiVersion: v1
 kind: Service
@@ -32,3 +33,22 @@ spec:
       targetPort: 8080
   selector:
     app: tasky
+---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: wiz-cluster-admin
+  namespace: default
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: wiz-cluster-admin-binding
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: cluster-admin
+subjects:
+- kind: ServiceAccount
+  name: wiz-cluster-admin
+  namespace: default
